# PoreMind

./: LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: citation_and_license.md  index.md  installation.md  nanopore_single_molecule_framework.md  quickstart.md  quickstart_notebook.ipynb  requirements-docs.txt
docs/functions/: README.md  analyze_abf_to_event_df.md  box_significance.md  build_DL_model.md  build_best_model.md  butterworth_filtfilt.md  classify_new_samples.md  classify_new_samples_DL.md  create_analysis_object.md  current.md  denoise.md  detect_events.md  detect_events_cusum.md  detect_events_hmm.md  detect_events_pelt.md  detect_events_simple.md  detect_events_threshold.md  do_pca.md  do_tsne.md  do_umap.md  estimate_baseline.md  event_current.md  event_current_label.md  event_current_simple.md  events_to_dataframe.md  extract_features.md  filter_events.md  index.md  load.md  load_model_package.md  median_filter.md  model_cm.md  model_metric_bar.md  moving_average.md  plot_2d.md  plot_3d.md  plot_fold_loss.md  predict_events.md  preprocess_signal.md  preview_signal.md  (+10 more)
notebooks/: step_by_step_analysis.ipynb
src/claw/: README.md  README.zh.md  SKILL.md  SKILL.zh.md
src/poremind/: __init__.py  baseline.py  events.py  features.py  io.py  ml.py  pipeline.py  pl.py  preprocess.py  workflow.py
src/ui/: __init__.py  app.py  controller.py  session.py
tests/: test_pipeline_and_ml.py  test_ui_controller.py
